add feature find user by role
